--- a/render.yaml
+++ b/render.yaml
@@ -12,6 +12,6 @@ services:
       - key: DEBUG
         value: false
       - key: ALLOWED_HOSTS
-        value: kho-my-pham.onrender.com
+        value: khomypham.onrender.com
       - key: DATABASE_URL
         value: postgresql://khomypham_user:t07FMiBJ7dcCacUvydxBC4o9tSLTw1Hd@dpg-d24qrjili9vc73ej9sqg-a.singapore-postgres.render.com/khomypham 
