--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -8,4 +8,5 @@ psycopg2-binary==2.9.10
 python-decouple==3.8
 dj-database-url==2.1.0
 gunicorn==21.2.0
-whitenoise==6.6.0 
+whitenoise==6.6.0
+requests==2.32.4 
