--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ django-crispy-forms==2.4
 crispy-bootstrap5==2025.6
 psycopg2==2.9.9
 python-decouple==3.8
-dj-database-url==2.1.0 
+dj-database-url==2.1.0
+pandas==2.3.1
+xlrd==2.0.1 
