--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -9,4 +9,6 @@ python-decouple==3.8
 dj-database-url==2.1.0
 gunicorn==21.2.0
 whitenoise==6.6.0
-requests==2.32.4 
+requests==2.32.4
+pandas==2.3.1
+xlrd==2.0.1 
