--- a/render.yaml
+++ b/render.yaml
@@ -15,5 +15,4 @@ services:
         value: false
       - key: ALLOWED_HOSTS
         value: khomypham.onrender.com
-      - key: DATABASE_URL
-        value: postgresql://khomypham_user:t07FMiBJ7dcCacUvydxBC4o9tSLTw1Hd@dpg-d24qrjili9vc73ej9sqg-a.singapore-postgres.render.com/khomypham 
+      # Set DATABASE_URL in Render Dashboard (Environment tab). Do not hard-code here.
